--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
     <% 5.times do %>
       <li class='cycle even odd pass fail pending'>
         <a href='/projects'>Launch Critical</a>
-        <div class="app">Tender App</div>
+        <div class="app">Tender Support</div>
         <div class='meta'>Test due by <span class="date">January 13, 2009</a></div>
       </li>
     <% end %>
