--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id='header'>
-      <h1>projects</h1>
+      <h1><a href="/">Frailty</a></h1>
       </address>
     </div>
     <div id='content'>
